
*** mu
   - show only leaf/rfc822 MIME-parts

*** mu4e
   - allow for shell commands with arguments in `mu4e-get-mail-command'.
   - support marking messages as 'read' and 'unread'
   - show the current query in the the mode-line (`global-mode-string').
   - don't repeat 'Re:' / 'Fwd:'
   - colorize cited message parts
   - better handling of text-based, embedded message attachments
   - some other minor things
   - documentation improvements

** Release 0.9.8 <2012-01-31>

   - '--descending' has  been renamed into '--reverse'
   - search for attachment MIME-type using 'mime:' or 'y:'
   - search for text in text-attachments using 'embed:' or 'e:'
   - searching for attachment file names now uses 'file:' (was: 'attach:')
   - experimental emacs-based mail client -- "mu4e"
   - added more unit tests
   - improved guile binding - no special binary is needed anymore, it's
     installable are works with the normal guile system; code has been
     substantially improved. still 'experimental'

** Release 0.9.7 <2011-09-03 Sat>

   - don't enforce UTF-8 output, use locale (fixes issue #11)
   - add mail threading to mu-find (using -t/--threads) (sorta fixes issue #13)
   - add header line to --format=mutt-ab (mu cfind), (fixes issue #42)
   - terminate mu view results with a form-feed marker (use --terminate) (fixes
     issue #41)
   - search X-Label: tags (fixes issue #40)
   - added toys/muile, the mu guile shells, which allows for message stats etc.
   - fix date handling (timezones)

** Release 0.9.6 <2011-05-28 Sat>

   - FreeBSD build fix
   - fix matching for mu cfind to be as expected
   - fix mu-contacts for broken names/emails
   - clear the contacts-cache too when doing a --rebuild
   - wildcard searches ('*') for fields (except for path/maildir)
   - search for attachment file names (with 'a:'/'attach:') -- also works with
     wildcards
   - remove --xquery completely; use --output=xquery instead
   - fix progress info in 'mu index'